[project]
name = "avstack-security"
version = "0.1.0-alpha.1"
description = "Security analysis routines for autonomous vehicles"
authors = [{ name = "Spencer Hallyburton", email = "spencer.hallyburton@duke.edu" }]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = "MIT"
keywords = [
    "security",
    "perception",
    "autonomous vehicles",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy~=1.19",
    "scipy>=1.8.0,<2",
    "avstack-core",
    "avstack-api",
]

[project.urls]
Homepage = "https://cpsl.pratt.duke.edu/"
Repository = "https://github.com/avstack-lab/avstack-security"

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "seaborn>=0.12",
]
test = [
    "snakeviz>=2.1.1,<3",
    "pytest>=7,<8",
    "pytest-cov>=4,<5",
    "bandit~=1.7",
    "black[jupyter]~=22.12.0",
    "mypy>=0,<1",
    "isort~=5.11",
    "flake8~=5.0",
    "autoflake>=1,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[tool.uv.sources]
avstack-core = { path = "../avstack-core", editable = true }
avstack-api = { path = "../avstack-api", editable = true }

[tool.hatch.build.targets.sdist]
include = ["avsec"]

[tool.hatch.build.targets.wheel]
include = ["avsec"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s"
testpaths = [
    "tests",
    "integration",
]
